--- a/body.html
+++ b/body.html
@@ -34,18 +34,19 @@ a:hover {color: white; text-decoration:underline;}
 
 <!-- main topic -->
     <h3 style="margin:0px 20px 0px 20px">
-      <a id="Main Topic" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Main Topic </h3>
+      <a id="Main Topic" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Main Topic</h3>
 
 
     <p style="margin:0px 20px 0px 20px">  
-   		<br> The purpose of the workshop is to bring together researchers and practitioners from Both China and USA, so that they can exchange their knowledge and stimulate each other through intensive discussions mainly (but not limited to) the research topics listed below.
+   		<br>
+      The purpose of the workshop is to bring together researchers and practitioners from Both China and USA, so that they can exchange their knowledge and stimulate each other through intensive discussions mainly (but not limited to) the research topics listed below.
       
-      <li style="margin:0px 20px 0px 20px">Pattern Recognition and Machine Learning</li>
-      <li style="margin:0px 20px 0px 20px">Image Processing and Analysis</li>
-      <li style="margin:0px 20px 0px 20px">Machine Vision and Application</li>
-      <li style="margin:0px 20px 0px 20px">Speech Processing</li>
-      <li style="margin:0px 20px 0px 20px">Robotics and Application</li>
-      <li style="margin:0px 20px 0px 20px">Internet Technology and Visualization</li>
+      <li style="margin:0px 20px 0px 30px">Pattern Recognition and Machine Learning</li>
+      <li style="margin:0px 20px 0px 30px">Image Processing and Analysis</li>
+      <li style="margin:0px 20px 0px 30px">Machine Vision and Application</li>
+      <li style="margin:0px 20px 0px 30px">Speech Processing</li>
+      <li style="margin:0px 20px 0px 30px">Robotics and Application</li>
+      <li style="margin:0px 20px 0px 30px">Internet Technology and Visualization</li>
     </p>
 
 <br>
@@ -76,23 +77,23 @@ a:hover {color: white; text-decoration:underline;}
        
         <br>
 
-        09:00 – 09:15  Opening Remarks (XXX)
+        09:00 - 09:15  Opening Remarks (XXX)
         <br>
-        09:15 – 10:15  Keynote Talk I (XXX)
+        09:15 - 10:15  Keynote Talk I (XXX)
         <br>
-        10:15 – 10:30  Break
+        10:15 - 10:30  Break
         <br>
-        10:30 – 12:00  Invited Talk Session I
+        10:30 - 12:00  Invited Talk Session I
         <br>
-        12:00 – 14:00  Lunch Break
+        12:00 - 14:00  Lunch Break
         <br>
-        14:00 – 15:30  Invited Talk Session II
+        14:00 - 15:30  Invited Talk Session II
         <br>
-        15:30 – 16:00  Break
+        15:30 - 16:00  Break
         <br>
-        16:00 – 17:00  Invited Talk Session III
+        16:00 - 17:00  Invited Talk Session III
         <br>
-        18:00 – 20:30  Banquet　
+        18:00 - 20:30  Banquet　
         <br>
         <br>
 
@@ -100,13 +101,13 @@ a:hover {color: white; text-decoration:underline;}
         <font size="3"><b>July 24th, 2018</b></font>
         <br>
 
-        09:00 – 10:00  Keynote Talk I (XXX)
+        09:00 - 10:00  Keynote Talk I (XXX)
         <br>
-        10:00 – 10:30  Break
+        10:00 - 10:30  Break
         <br>
-        10:30 – 12:00  Invited Talk Session I
+        10:30 - 12:00  Invited Talk Session I
         <br>
-        12:00 – 14:00  Lunch Break
+        12:00 - 14:00  Lunch Break
         <br>
         Afternoon: 		Open Discussion
         <br>
