--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@ a:hover {color: white; text-decoration:underline;}
 
 </style>
 
-<frameset rows="200pt, " frameborder="no">
-	<frame scrolling="no" src="header.html" />
-	<frame  src="body.html" name="frame_body" />
+<frameset rows="200pt, *" frameborder="no">
+	<frame scrolling="no" src="header.html" ></frame>
+	<frame  src="body.html" name="frame_body" ></frame>
 </frameset>
+</html>
