--- a/header.html
+++ b/header.html
@@ -7,13 +7,13 @@ html,body{height:auto;background-size: cover;}
 *{margin:0;padding:0;}
 .header{width:100%;height:auto;background:#x11;white-space:nowrap;}
 .index{width:100%;height:auto;background:#111;white-space:nowrap;}
-a {color: #aaa;}
+a {color: #eee;}
 a:hover {color: white; text-decoration:underline;}
 
 </style>
 <div align="center">
 <div class="header">
-	<img src="img/alaska_1.jpg" height="200px" width="100%" class="figure-img img-fluid img-rounded" alt="alska">
+	<img src="img/alaska_2.jpg" height="200px" width="100%" class="figure-img img-fluid img-rounded" alt="alska">
 </div>
 
 <!-- index -->
