--- a/body.html
+++ b/body.html
@@ -150,9 +150,9 @@ a:hover {color: white; text-decoration:underline;}
 
         <br><br>
 
-        <img  src="img/zhang.jpg" height="60px" style="float: left; margin: 0pt 10px 0pt 25pt;" />
-        <b>Shiliang Zhang </b> </br>
-          Peking University
+        <!-- <img  src="img/zhang.jpg" height="60px" style="float: left; margin: 0pt 10px 0pt 25pt;" />  -->
+        <!-- <b>Shiliang Zhang </b> </br>  -->
+        <!--  Peking University -->
       <br>
       <br>
       <br>
