--- a/header.html
+++ b/header.html
@@ -36,7 +36,7 @@ a:hover {color: white; text-decoration:underline;}
 <div class="header" >
 	<p style="margin:-110px 0px 10px 0px">
     <font color="white", size="6">
-     The 1st Joint Workshop on Multimedia and Computer Vision Computing (MCVC2018)</font>
+     The 1st International Workshop on Visual Cognition and Computing (VCC 2018)</font>
   </p>
 	<p style="margin:-5px 0px 0px 0px">
     <font color="white", size="3">
@@ -44,7 +44,7 @@ a:hover {color: white; text-decoration:underline;}
   </p>
   <p style="margin:2px 0px 0px 0px">
       <font color="white", size="3">
-			July 23-26, 2018 </font>
+			July 28-31, 2018 </font>
     </p>
 </div>
 
